Changelog
=========


1.0a9
-----
* contact form required fields, required style
  [fsprenger]
  
* styling changes according to df 2.1v7
  [fsprenger]
  
* Fixed byline icon for overview tab
  [lgraf]

* Added generic application icon as fallback for application/* mimetypes
  [lgraf]

* Added mimetype for *.docx to mimetypes_registry
  [lgraf]

* customized site actions and personal tools viewlet for zug.ch
  [27.06.2011, fsprenger]

* Added sortAttribut and sortOrder to metadata. 
  [27.06.2011, mathias.leimgruber]

* Implemented izug.theme navigation (zug behavior). 
  UPDATE: import profile (it will install a custom property sheet)
  [27.06.2011, mathias.leimgruber]

* Moved ftw.mail.mail FTI from default to opengever profile
  [lgraf]

* Issue #1052 Byline icons durch sprite icons ersetzen
  Added ByLine modifications
  [ttschanz]

* Added login / join / register templates from ZugSkin
  [fsprenger]
  
* Table styling for zug.ch, person view styling
  [fsprenger]

* Fixed some annoying layout bugs in IE7
  [fsprenger]

* Added sprite icon for response action
  [lgraf]

* Added more icons, changed news icon, added unused content types
  [fsprenger]

* Improved markup on test_icon page, made the page public, improved code 
  listing style
  [fsprenger]
  
* Updated sprite icons for mimetypes
  [lgraf]

* Disabled locales for plone 3. Plone translation customization break all 
  translations in the plone domain.
  [fsprenger]

* Removed font size switch.
  [fsprenger]
    
* Removed icon_expr for print action (now done with sprites)
  [lgraf]

* Added banner image functionality like in zug.ch. Banner is hidden per default
  unless a folder 'bannerbilder' exists in the current location which has to 
  be an INavigationRoot
  [fsprenger]

* Compatibility with plone 3; added a new import step for plone 3 sites, a new 
  skin layer for plone 3 and a customized stylessheet for compatibility
  [fsprenger]
  
* Issue #934 Fehler bei den Falldossiers 1 und 2 BD.ARP