@@ -218,9 +218,7 @@ div.tabbedview-tabs ul.formTabs li a.selected {
 .portletTreePortlet ul.treeview {
     margin-top: 0em;
 }
-.documentActions a {
-    padding: 0.1em 0 0.2em 1.7em !important;
-}
+
 /* fix button size for ie7 */
 *+html button,
 *+html input[type=button],
